--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@nestjs/common": "^10.3.0",
     "@prisma/client": "^5.7.1",
+    "axios": "^1.6.3",
     "external-editor": "^3.1.0"
   },
   "devDependencies": {
