--- a/src/frontend/ent/package.json
+++ b/src/frontend/ent/package.json
@@ -14,6 +14,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "axios": "^1.6.3",
+    "cors": "^2.8.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
