--- a/src/frontend/proc/package.json
+++ b/src/frontend/proc/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "start": "PORT=$WEB_PORT react-scripts start",
+    "dev": "node server.js",
+    "start": "PORT=$WEB_PORT node server.js",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18"
