--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,4 @@
-
-
 services:
-
   # Database to store XML data
   db-xml:
     container_name: db-xml
@@ -180,21 +177,11 @@ services:
       API_PORT: ${API_PORT}
 
   # Container that runs a golang exmaple
-  golang-example:
-    container_name: golang-example
+  golang:
+    container_name: golang
     build: docker/images/golang
     volumes:
-      - ./src/examples/golang:/usr/src/app
-      - ./docker/volumes/xml:/xml
-    environment:
-      USE_DEV_MODE: ${USE_DEV_MODE}
-
-  # Container that runs a elixir exmaple
-  elixir-example:
-    container_name: elixir-example
-    build: docker/images/elixir
-    volumes:
-      - ./src/examples/elixir:/usr/src/app
+      - ./src/daemon/golang:/usr/src/app
       - ./docker/volumes/xml:/xml
     environment:
       USE_DEV_MODE: ${USE_DEV_MODE}
@@ -207,10 +194,10 @@ services:
       RABBITMQ_DEFAULT_PASS: "$RABBITMQ_DEFAULT_PASS"
       RABBITMQ_DEFAULT_VHOST: "$RABBITMQ_DEFAULT_VHOST"
     ports:
-      - "5672:5672"   # AMQP protocol port
+      - "5672:5672" # AMQP protocol port
       - "15672:15672" # management interface port
     healthcheck:
-      test: [ "CMD", "rabbitmq-diagnostics", "ping", "-q" ]
+      test: ["CMD", "rabbitmq-diagnostics", "ping", "-q"]
       interval: 30s
       timeout: 10s
       retries: 5
