watcher and migrator
migrator receiving the messages from broker

--- a/docker/images/golang/Dockerfile
+++ b/docker/images/golang/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /usr/src/app
 # install bash
 RUN apk add bash
 
+# Instalação do cliente PostgreSQL
+RUN apk add --no-cache postgresql-client
+
 # install nodemon
 RUN apk add --update nodejs npm
 RUN npm update npm -g
