--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "external-editor": "^3.1.0"
   },
   "devDependencies": {
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
