--- a/docker/images/python/Dockerfile
+++ b/docker/images/python/Dockerfile
@@ -19,6 +19,7 @@ RUN apk add g++
 # upgrade pip
 RUN python -m pip install --upgrade pip
 RUN pip install lxml
+RUN pip install pika
 # dependencies
 COPY ./requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
