--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "@nestjs/common": "^10.3.0",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.3",
-    "external-editor": "^3.1.0"
+    "external-editor": "^3.1.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "prisma": "^5.7.1",
     "jest": "^29.7.0",
+    "prisma": "^5.7.1",
     "ts-jest": "^29.1.1"
   }
 }
