--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "@nestjs/common": "^10.3.0",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.3",
-    "external-editor": "^3.1.0"
+    "external-editor": "^3.1.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
-    "prisma": "^5.7.1",
     "jest": "^29.7.0",
+    "prisma": "^5.7.1",
     "ts-jest": "^29.1.1"
   }
 }
