--- a/src/frontend/ent/package.json
+++ b/src/frontend/ent/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
