--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "@nestjs/common": "^10.3.0",
     "@prisma/client": "^5.7.1",
-    "axios": "^1.6.3",
+    "axios": "^1.6.5",
     "external-editor": "^3.1.0",
-    "react-query": "^3.39.3",
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
